# BLOP

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ansi.h  blop.h  blop_basics.h  colours.h  documentation-template.h  error.h  iofc.h  list.h  macros.h  memory.h  pool.h  stdmacro.h  string.h  vector.h
blop/: blop.c  blop.h  file.h  list.h  memory.h  memtrack.h  openai.h  openrouter.h  pool.h  slab.h  string.h  utils.h  vector.h
doc/: Doxyfile  ansi.dox  blop.dox  index.dox  list.dox  pool.dox  template.dox  vector.dox
doc/html/: annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_b.html  globals_defs.html  globals_dup.js  globals_func.html  globals_type.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  topics.html  topics.js
documentation/html/: annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  topics.html  topics.js
documentation/latex/: annotated.tex  files.tex  index.tex  refman.tex  topics.tex
include/blop/: blop.h  common.h  debug.h  list.h  memory.h  path.h  utils.h  vector.h
src/: Blop.h  CMakeLists.txt  blop.c  defaults.c  list.c  memory.c  utils.c  vector.c
src/containers/: CMakeLists.txt  list.c  vector.c
test/: ansi.c  build.bat  infinite.c  list.c  log.c  openai.c  pool.c  vector.c
(+317 files in other folders)
